[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "maskit"
authors = [
    {name = "Eileen Kuehn", email = "eileen.kuehn@kit.edu"},
    {name = "Christof Wendenius", email = "christof.wendenius@kit.edu"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
keywords = ["quantum computing",]
dependencies = [
    "pennylane ~= 0.18.0",
    "typing_extensions",
]

[project.optional-dependencies]
test = [
    "pytest >=4.3.0",
    "flake8",
    "flake8-bugbear",
    "black",
    "scikit-learn",
    "tensorflow >=2.0.0",
]
datasets = [
    "tensorflow >=2.0.0",
]
dev = ["pre-commit"]
doc = [
    "sphinx",
    "myst_parser",
]

[project.urls]
Source = "https://github.com/cirKITers/masKIT"
